finally got serving the static file to work properly

--- a/server/landing/index.html
+++ b/server/landing/index.html
@@ -30,7 +30,8 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="dist/images/favicon.png">
+  <link rel="icon" type="image/png" href="../dist/images/favicon.png">
+  
 
 </head>
 <body>
@@ -51,7 +52,7 @@
         </div>
         <div class="one-half column phones">
           <video width="260" autoplay="true" loop="loop" preload="auto" style="z-index:1110;position:absolute; left: 131px; top:-54px;" muted>
-            <source src="images/fileio.mp4" type="video/mp4">
+            <source src="../images/fileio.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video>
           <img class="phone" src="images/iphone.png">
