--- a/server/nutritionize/deps/label.html
+++ b/server/nutritionize/deps/label.html
@@ -9,6 +9,7 @@
 .nutritionLabel .title {
   font-family: serif, 'Times', 'Times New Roman'!important;
   font-weight:bold!important;
+  font-size: 20pt;
 }
 .nutritionLabel {
   font-size: 10pt!important;
